--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
     "@auth0/angular-jwt": "^4.2.0",
+    "@cloudinary/angular-5.x": "^1.2.2",
     "angular2-jwt": "^0.2.3",
+    "cloudinary-core": "^2.8.2",
+    "ng2-file-upload": "^1.4.0",
     "rxjs": "~6.4.0",
     "tailwindcss": "^1.4.6",
     "tslib": "^1.10.0",
