--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.9",
+    "@angular/animations": "^8.2.14",
     "@angular/common": "~8.2.9",
     "@angular/compiler": "~8.2.9",
     "@angular/core": "~8.2.9",
@@ -20,7 +20,10 @@
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
     "@auth0/angular-jwt": "^4.2.0",
+    "angular2-flash-messages": "^3.0.1",
     "angular2-jwt": "^0.2.3",
+    "bootstrap": "^3.4.1",
+    "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.4.0",
     "tailwindcss": "^1.4.6",
     "tslib": "^1.10.0",
