--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "angularfire": "^2.3.0",
     "bootstrap": "^3.4.1",
     "cloudinary-core": "^2.8.2",
+    "express": "^4.17.1",
     "file-upload-firestorage": "^0.2.0",
     "firebase": ">= 5.5.7 <8",
     "ng2-file-upload": "^1.4.0",
-    "ngx-bootstrap": "^5.6.1",
+    "ngx-bootstrap": "^5.1.0",
     "rxjs": "~6.4.0",
     "tailwindcss": "^1.4.6",
     "tslib": "^1.10.0",
@@ -60,5 +61,8 @@
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1"
+  },
+  "resolutions": {
+    "@babel/preset-env": "^7.8.7"
   }
 }
