--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.9",
     "@angular/compiler": "~8.2.9",
     "@angular/core": "~8.2.9",
     "@angular/fire": "^5.4.2",
     "@angular/forms": "~8.2.9",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
@@ -31,6 +33,7 @@
     "express": "^4.17.1",
     "file-upload-firestorage": "^0.2.0",
     "firebase": ">= 5.5.7 <8",
+    "hammerjs": "^2.0.8",
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^5.1.0",
     "rxjs": "~6.4.0",
