--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
+    "@angular/pwa": "^0.1000.1",
     "@angular/router": "~8.2.9",
+    "@angular/service-worker": "~8.2.9",
     "@auth0/angular-jwt": "^4.2.0",
     "@cloudinary/angular-5.x": "^1.2.2",
     "angular-ng-autocomplete": "^2.0.1",
