--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~8.2.9",
     "@angular/service-worker": "~8.2.9",
     "@auth0/angular-jwt": "^4.2.0",
+    "@babel/compat-data": "^7.8.0",
     "@cloudinary/angular-5.x": "^1.2.2",
     "angular-ng-autocomplete": "^2.0.1",
     "angular2-jwt": "^0.2.3",
