--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/pwa": "^0.1000.1",
     "@angular/router": "~8.2.9",
-    "@angular/service-worker": "~8.2.9",
+    "@angular/service-worker": "^8.2.14",
     "@auth0/angular-jwt": "^4.2.0",
     "@babel/compat-data": "^7.8.0",
     "@cloudinary/angular-5.x": "^1.2.2",
